# tiradev

./: .coveragerc  .gitignore  .pylintrc  README.md  connectfour.py  game.py  määrittelydokumentti.md  pyproject.toml  tasks.py  viikkoraportti1  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md
documents/: käyttöohje  käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: ai.py  connectfour.py  gameboard.py  main.py  settings.py
src/tests/: ai_test.py  gameboard_test.py  settings_test.py
