[tool.poetry]
name = "tiradev"
version = "0.1.0"
description = ""
authors = ["Harri Nieminen <nieminen.harri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cowsay = "^5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
