[tool.poetry]
name = "tiradev"
version = "0.1.0"
description = ""
authors = ["Harri Nieminen <nieminen.harri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cowsay = "^5.0"
numpy = "^1.23.5"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
numpy = "^1.23.5"
coverage = "^6.5.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
